UI cleaning otp page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,166 +3,169 @@
 @tailwind utilities;
 @import "~leaflet/dist/leaflet.css";
 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
+
 ::-webkit-scrollbar {
-	width: 6px;
+  width: 6px;
 }
 
 ::-webkit-scrollbar-thumb {
-	background-color: #d8d8d8;
-	border-radius: 40px;
+  background-color: #d8d8d8;
+  border-radius: 40px;
 }
 
 ::-webkit-scrollbar-track {
-	background-color: transparent;
+  background-color: transparent;
 }
 
 .mobile-w {
-	width: 375px;
-
+  width: 375px;
 }
 
 .mobile-h {
-	height: 100%;
+  height: 100%;
 }
-
 
 /* ------------------------------------ Start Fotbar ------------------------------------ */
 .kotak {
-	/* bg-warna */
-	background-color: #FAFAFA;
-	height: 100px;
-	border-radius: 10px;
-	width: 375px;
-	border-radius: 12px;
-	position: absolute;
-	margin-bottom: 100px;
+  /* bg-warna */
+  background-color: #fafafa;
+  height: 100px;
+  border-radius: 10px;
+  width: 375px;
+  border-radius: 12px;
+  position: absolute;
+  margin-bottom: 100px;
 }
 
 .lingkar {
-	border-radius: 500px;
-	background-color: #c4c4c4;
-	width: 82.89854431152344px;
-	height: 88px;
-	position: absolute;
-	left: 153px;
-	top: -44px;
+  border-radius: 500px;
+  background-color: #c4c4c4;
+  width: 82.89854431152344px;
+  height: 88px;
+  position: absolute;
+  left: 153px;
+  top: -44px;
 }
 
 .icon_nav {
-	color: #BDC2C6;
-	width: 24px;
-	height: 24px;
-	position: absolute;
+  color: #bdc2c6;
+  width: 24px;
+  height: 24px;
+  position: absolute;
 }
 
 /* menu ke 1 */
 .menu1 {
-	left: 37px;
-	top: 28px;
+  left: 37px;
+  top: 28px;
 }
 
 /* meneu ke 2 */
 .menu2 {
-	color: #BDC2C6;
-	left: 105px;
-	top: 28px;
+  color: #bdc2c6;
+  left: 105px;
+  top: 28px;
 }
 
 /* menu ke 3 */
 .menu3 {
-	color: #BDC2C6;
-	left: 261px;
-	top: 28px;
+  color: #bdc2c6;
+  left: 261px;
+  top: 28px;
 }
 
 /* menu ke 4 */
 .menu4 {
-	color: #bdc2c6;
-	left: 329px;
-	top: 28px;
+  color: #bdc2c6;
+  left: 329px;
+  top: 28px;
 }
 
 /* menu tengah */
 .lingkaran {
-	background-image: linear-gradient(0deg, #3fb648 0%, #64a66a 100%);
-	width: 64px;
-	height: 64px;
-	position: absolute;
-	border-radius: 100px;
-	left: 162px;
-	top: -32px;
+  background-image: linear-gradient(0deg, #3fb648 0%, #64a66a 100%);
+  width: 64px;
+  height: 64px;
+  position: absolute;
+  border-radius: 100px;
+  left: 162px;
+  top: -32px;
 }
 
 .iconQr {
-	background-color: rgba(255, 255, 255, 1);
-	width: 40px;
-	height: 40px;
-	position: absolute;
-	left: 12px;
-	top: 12px;
-	border-radius: 100px;
+  background-color: rgba(255, 255, 255, 1);
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  left: 12px;
+  top: 12px;
+  border-radius: 100px;
 }
 
 /* ------------------------------------ End Fotbar ------------------------------------ */
 
 .ketProduk {
-	overflow: hidden;
-	text-overflow: ellipsis;
-	display: -webkit-box;
-	-webkit-line-clamp: 6;
-	/* Show only 3 lines */
-	-webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 6;
+  /* Show only 3 lines */
+  -webkit-box-orient: vertical;
 }
 
 /* ----------------------------------------------------- Nominal */
 .custom-radio {
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-	border-radius: 0;
-	outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0;
+  outline: none;
 }
 
 .custom-input {
-	border-radius: 0;
-	outline: none;
-	/* Tambahkan gaya lain sesuai kebutuhan Anda */
+  border-radius: 0;
+  outline: none;
+  /* Tambahkan gaya lain sesuai kebutuhan Anda */
 }
 
 .custom-radio:checked {
-	border: 2px solid #3490dc;
+  border: 2px solid #3490dc;
 }
 
 .custom-radio-checked {
-	background-color: #3490dc;
+  background-color: #3490dc;
 }
 
 /* ----------------------------------------------------------- */
 .your-custom-container-class {
-	/* width: 375px; */
+  /* width: 375px; */
 
-	/* CSS untuk kontainer SweetAlert */
+  /* CSS untuk kontainer SweetAlert */
 }
 
 .your-custom-popup-class {
-	width: 372px;
-	position: absolute;
-	bottom: 10px;
-	margin: auto;
+  width: 372px;
+  position: absolute;
+  bottom: 10px;
+  margin: auto;
 }
 
 .your-custom-title-class {
-	/* CSS untuk judul SweetAlert */
+  /* CSS untuk judul SweetAlert */
 }
 
 .your-custom-content-class {
-	/* CSS untuk konten SweetAlert */
+  /* CSS untuk konten SweetAlert */
 }
 
 .your-custom-confirm-button-class {
-	/* CSS untuk tombol konfirmasi SweetAlert */
+  /* CSS untuk tombol konfirmasi SweetAlert */
 }
 
 .your-custom-cancel-button-class {
-	/* CSS untuk tombol pembatalan SweetAlert */
+  /* CSS untuk tombol pembatalan SweetAlert */
 }
