--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -244,3 +244,97 @@ option[value="bca"].with-image {
 option[value="mandiri"].with-image {
   background-image: url('/bank/mandiri.png');
 }
+
+/* ========icon Load===================== */
+.loader {
+  position: absolute;
+  width: 64px;
+  height: 60px;
+}
+
+.loader::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: #fff;
+  width: 64px;
+  height: 32px;
+  border-radius: 0 0 50px 50px;
+  animation: move 0.5s linear infinite alternate;
+}
+
+.loader::before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  top: 0;
+  background: #FF3D00;
+  width: 24px;
+  height: 24px;
+  transform: translateX(-50%) rotate(0deg);
+  animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+  100% {
+    transform: translateX(-50%) rotate(360deg)
+  }
+}
+
+@keyframes move {
+  0% {
+    transform: rotate(10deg)
+  }
+
+  100% {
+    transform: rotate(-10deg)
+  }
+}
+
+/* ==============================button load==================== */
+.btn-loader {
+  position: sticky;
+  width: 20px;
+  height: 20px;
+}
+
+.btn-loader::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: #fff;
+  width: 20px;
+  height: 10px;
+  border-radius: 0 0 50px 50px;
+  animation: move 0.5s linear infinite alternate;
+}
+
+.btn-loader::before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  top: 0;
+  background: #FF3D00;
+  width: 8px;
+  height: 8px;
+  transform: translateX(-50%) rotate(0deg);
+  animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+  100% {
+    transform: translateX(-50%) rotate(360deg)
+  }
+}
+
+@keyframes move {
+  0% {
+    transform: rotate(10deg)
+  }
+
+  100% {
+    transform: rotate(-10deg)
+  }
+}
