modul detonator can create a campaign, can register session handler 401

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -338,3 +338,9 @@ option[value="mandiri"].with-image {
     transform: rotate(-10deg)
   }
 }
+
+
+/* ==================Alert ==================== */
+.colored-toast {
+  background-color: #f87171;
+}
