--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -36,9 +36,15 @@
 .card {
   /* flex-wrap: nowrap; */
   /* background-color: #6cb28e; */
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
   overflow: auto;
   max-height: 60%;
-  padding-bottom: 70px;
+  padding-bottom: 150px;
+  /* padding-top: 70px; */
 }
 
 .card::-webkit-scrollbar {
@@ -144,11 +150,13 @@
   width: 350px;
   height: 100px;
   border-radius: 10px;
-  background: linear-gradient(to right,
-      #f0f0f0 0%,
-      #d8d8d8 20%,
-      #f0f0f0 40%,
-      #f0f0f0 100%);
+  background: linear-gradient(
+    to right,
+    #f0f0f0 0%,
+    #d8d8d8 20%,
+    #f0f0f0 40%,
+    #f0f0f0 100%
+  );
   background-size: 200% 100%;
   animation: shimmer 1.5s infinite;
 }
