--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,12 @@ input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
 }
+input {
+  outline: none;
+}
+input[type="checkbox"] {
+  accent-color: #3ab74d;
+}
 
 .custom-swal {
   height: 500px;
@@ -78,12 +84,12 @@ input[type="number"]::-webkit-outer-spin-button {
   /* bg-warna */
   background-color: white;
   box-shadow: 0px 0px 20px 0px rgba(0, 38, 96, 0.08);
-  height: 100px;
+  height: 200px;
   border-radius: 10px;
   width: 375px;
-  border-radius: 12px;
+  border-radius: 20px;
   position: absolute;
-  margin-bottom: 100px;
+  /* margin-bottom: 100px; */
 }
 
 .lingkar {
