--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,55 @@ input[type="radio"] {
   accent-color: #3ab74d;
 }
 
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 22px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 1px;
+  bottom: 1px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #3ab74d;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #3ab74d;
+}
+
+input:checked + .slider:before {
+  transform: translateX(18px);
+}
+
 .custom-swal {
   height: 500px;
   padding: 0;
@@ -66,7 +115,7 @@ input[type="radio"] {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #d8d8d8;
+  background-color: #6b6a6a;
   border-radius: 40px;
 }
 
@@ -113,13 +162,13 @@ input[type="radio"] {
 
 /* menu ke 1 */
 .menu1 {
-  left: 37px;
+  left: 30px;
   top: 28px;
 }
 
 /* meneu ke 2 */
 .menu2 {
-  left: 105px;
+  left: 75px;
   top: 28px;
 }
 
